# Scoop-Search

./: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md
.github/workflows/: build.yaml
Scoop-Search/: CMakeLists.txt  Scoop-Search.cpp  Scoop-Search.h  console_color.h  thread_pool.hpp  util.cpp  util.h
